fix graphiql footer overflow

--- a/packages/graphiql-react/src/style/codemirror.css
+++ b/packages/graphiql-react/src/style/codemirror.css
@@ -1,10 +1,3 @@
-/* Set default background color */
-.graphiql-container .CodeMirror,
-.graphiql-container .CodeMirror-gutters {
-  background: none;
-  background-color: var(--editor-background, hsl(var(--color-base)));
-}
-
 /* No padding around line numbers */
 .graphiql-container .CodeMirror-linenumber {
   padding: 0;
